sdk/v0.3/bedrock.mdx
---
title: "pixeltable.functions.bedrock"
sidebarTitle: "bedrock"
icon: "square-m"
---
<a href="https://github.com/pixeltable/pixeltable/blob/v0.3/pixeltable/functions/bedrock.py#L0" target="_blank">View source on GitHub</a>

## UDFs


---

### `converse()` <sub>udf</sub>

Generate a conversation response.


Equivalent to the AWS Bedrock `converse` API endpoint. For additional details, see: [https://docs.aws.amazon.com/bedrock/latest/userguide/conversation-inference.html](https://docs.aws.amazon.com/bedrock/latest/userguide/conversation-inference.html)

**Requirements:**

- `pip install boto3`


**Signature:**

```python
converse(
    messages: Json,
    model_id: String,
    system: Optional[Json],
    inference_config: Optional[Json],
    additional_model_request_fields: Optional[Json],
    tool_config: Optional[Json]
)-> Json
```

**Parameters:**

- **`messages`** (*Json*): Input messages.
- **`model_id`** (*String*): The model that will complete your prompt.
- **`system`** (*Optional[Json]*): An optional system prompt.
- **`inference_config`** (*Optional[Json]*): Base inference parameters to use.
- **`additional_model_request_fields`** (*Optional[Json]*): Additional inference parameters to use.

**Returns:**

- *Json*: A dictionary containing the response and other metadata.



**Example:**

Add a computed column that applies the model `anthropic.claude-3-haiku-20240307-v1:0` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
msgs = [{'role': 'user', 'content': [{'text': tbl.prompt}]}]
tbl.add_computed_column(response=messages(msgs, model_id='anthropic.claude-3-haiku-20240307-v1:0'))
```


---

### `invoke_tools()` <sub>udf</sub>

Converts an Anthropic response dict to Pixeltable tool invocation format and calls `tools._invoke()`.


**Signature:**

```python
invoke_tools(
    tools: pixeltable.func.tools.Tools,
    response: pixeltable.exprs.expr.Expr
)-> pixeltable.exprs.inline_expr.InlineDict
```

